--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,11 +1,9 @@
 <ion-menu [content]="content">
-  <ion-header>
-    <ion-toolbar>
-      <ion-title>Menu</ion-title>
-    </ion-toolbar>
-  </ion-header>
 
   <ion-content>
+    <div padding>
+    <img src="http://s3.amazonaws.com/busites_www/agtmedia/appilcation/agt-logo.svg" alt="AGT Logo" class="side-logo">
+    </div>
     <ion-list>
       <button menuClose ion-item *ngFor="let p of pages" (click)="openPage(p)">
         {{p.title}}
