--- a/src/components/profile-wall/profile-wall.html
+++ b/src/components/profile-wall/profile-wall.html
@@ -38,7 +38,7 @@
           <div>4 Comments</div>
         </button>
       </ion-col>
-      <ion-col center text-center>
+      <ion-col text-center>
         <ion-note>
           11h ago
         </ion-note>
