--- a/src/components/progress-bar/progress-bar.html
+++ b/src/components/progress-bar/progress-bar.html
@@ -1,4 +1,6 @@
-<!-- Generated template for the ProgressBarComponent component -->
-<div>
-  {{text}}
-</div>
+<ion-item>
+  <div class="progress-outer">
+    <div class="progress-inner" [style.width]="progress + '%'"></div>
+  </div>
+  <div item-end>{{progress}}%</div>
+</ion-item>
